--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,3 +49,12 @@ html {
   outline: 2px solid #000;
   outline-offset: 2px;
 }
+
+.glass {
+  background: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(4px) saturate(180%);
+  box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2), inset 0 4px 20px rgba(255, 255, 255, 0.3);
+  padding: 2rem;
+  border-radius: 2rem;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+}
